Parcial04 - Add photo upload
