# openapi-specs/openapi.json
@@ -305,6 +305,42 @@
           }
         }
       }
+    },
+    "/api/Members/photo": {
+      "post": {
+        "tags": [
+          "Members"
+        ],
+        "operationId": "Members_AddPhoto",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary",
+                    "nullable": true
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Photo"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
